--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/luxplanjay/webpack-starter-kit.git"
+    "url": "git+https://github.com/Myhas05/goit-js-hw-12-weather-app.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Umanchuk Mykhailo <myhas07@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/luxplanjay/webpack-starter-kit/issues"
   },
-  "homepage": "https://github.com/luxplanjay/webpack-starter-kit#readme",
+  "homepage": "https://github.com/Myhas05/goit-js-hw-12-weather-app/dist/index.html",
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
@@ -49,6 +49,7 @@
   "dependencies": {
     "core-js": "^3.1.4",
     "handlebars": "^4.1.2",
+    "material-design-icons": "^3.0.1",
     "pnotify": "^4.0.0"
   }
 }
